starting to work on formula archetypes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(hypothesize,list)
 S3method(hypothesize,recipe)
 S3method(hypothesize,rx)
 S3method(hypothesize,tidy_dagitty)
+S3method(model_forge,model_archetype)
 S3method(print,hypothesis)
 S3method(print,model_forge)
 S3method(print,model_table)
