forging formulas with data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,14 +9,23 @@ S3method(hypothesize,list)
 S3method(hypothesize,recipe)
 S3method(hypothesize,rx)
 S3method(hypothesize,tidy_dagitty)
+S3method(model_forge,formula_archetype)
 S3method(model_forge,model_archetype)
 S3method(print,hypothesis)
 S3method(print,model_forge)
 S3method(print,model_table)
 S3method(tbl_models,data.frame)
 S3method(tidy,model_archetype)
+S3method(vec_cast,data.frame.model_forge)
+S3method(vec_cast,model_forge.data.frame)
 S3method(vec_cast,model_forge.model_forge)
+S3method(vec_cast,model_forge.tbl_df)
+S3method(vec_cast,tbl_df.model_forge)
+S3method(vec_ptype2,data.frame.model_forge)
+S3method(vec_ptype2,model_forge.data.frame)
 S3method(vec_ptype2,model_forge.model_forge)
+S3method(vec_ptype2,model_forge.tbl_df)
+S3method(vec_ptype2,tbl_df.model_forge)
 S3method(vec_ptype_abbr,model_forge)
 S3method(vec_ptype_full,model_forge)
 export("%>%")
