moved attributes of parameters and model information back to table itself

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,11 +19,11 @@ S3method(vec_ptype2,forge.tbl_df)
 S3method(vec_ptype2,tbl_df.forge)
 S3method(vec_ptype_abbr,data_list)
 S3method(vec_ptype_abbr,forge)
-S3method(vec_ptype_abbr,model_estimates)
+S3method(vec_ptype_abbr,model_info)
 S3method(vec_ptype_abbr,parameter_estimates)
 S3method(vec_ptype_full,data_list)
 S3method(vec_ptype_full,forge)
-S3method(vec_ptype_full,model_estimates)
+S3method(vec_ptype_full,model_info)
 S3method(vec_ptype_full,parameter_estimates)
 export(data_list)
 export(find_confounders)
@@ -33,7 +33,7 @@ export(forge_cast)
 export(forge_ptype2)
 export(glance)
 export(mdls)
-export(model_estimates)
+export(model_info)
 export(parameter_estimates)
 export(reconstruct)
 export(tbl_compare)
