make first draft of forest plot table function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,10 +34,12 @@ export(model_info)
 export(number_of_missing)
 export(parameter_estimates)
 export(tbl_compare)
+export(tbl_forest)
 export(tbl_models)
 export(tbl_sequential)
 export(theme_gt_compact)
 export(tidy)
+import(ggplot2)
 import(vctrs)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
