revise forest plots to accept appropraite parameters

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(fit,formula_archetype)
 S3method(glance,model_archetype)
 S3method(print,forge)
+S3method(tbl_forest,character)
 S3method(tbl_models,data.frame)
 S3method(tidy,model_archetype)
 S3method(vec_cast,data.frame.forge)
@@ -24,6 +25,7 @@ S3method(vec_ptype_full,forge)
 S3method(vec_ptype_full,model_info)
 S3method(vec_ptype_full,parameter_estimates)
 export(data_list)
+export(draw)
 export(fit)
 export(forge)
 export(forge_cast)
