add method to temper and unnest the forge object

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,7 +24,6 @@ S3method(vec_ptype_full,forge)
 S3method(vec_ptype_full,model_info)
 S3method(vec_ptype_full,parameter_estimates)
 export(data_list)
-export(draw)
 export(fit)
 export(forge)
 export(forge_cast)
@@ -35,6 +34,7 @@ export(model_info)
 export(number_of_missing)
 export(parameter_estimates)
 export(tbl_forest)
+export(temper)
 export(theme_gt_compact)
 export(tidy)
 import(ggplot2)
