add interaction terms to table of forest plots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,8 @@ export(forge)
 export(forge_cast)
 export(forge_ptype2)
 export(glance)
+export(interaction_estimates)
+export(is_dichotomous)
 export(mdls)
 export(model_info)
 export(number_of_missing)
