--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,7 @@ RoxygenNote: 7.2.1
 Depends:
     R (>= 4.0.0),
     vctrs (>= 0.3.8.0),
-    arcane,
+    arcana,
     tibble
 Imports: 
     generics,
@@ -45,7 +45,7 @@ Suggests:
     parsnip
 Remotes:
     asshah4/volundr,
-    asshah4/arcane,
+    asshah4/arcana,
 VignetteBuilder: knitr
 URL: https://github.com/asshah4/volundr
 BugReports: https://github.com/asshah4/volundr/issues
