--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,28 +1,29 @@
-url: https://asshah4.github.io/murmur/
+template:
+  bootstrap: 5
+  bootswatch: flatly
+  theme: solarized-light
 
 destination: docs
 
+url: https://asshah4.github.io/volundr/
+
 home:
-  title: Many Unknown Relationships Modelled Using R
-  description: A way to handle multiple models, with an emphasis on hypothesis testing
+  title: Forging many models together
+  description: A way to handle multiple models
+  sidebar:
+    structure: [links, license, community, citation, authors, dev]
 
 navbar:
   structure:
-    left:
-    - home
-    - intro
-    - reference
-    - articles
-    - tutorials
-    - news
-    right: github
+    left:  [intro, reference, articles, tutorials, news]
+    right: [github]
   components:
     home:
       icon: fas fa-home fa-lg
-      href: index.html
+      href: https://asshah4.github.io/
     reference:
       text: Reference
       href: reference/index.html
     github:
       icon: fab fa-github fa-lg
-      href: https://github.com/asshah4/murmur/
+      href: https://github.com/asshah4/volundr/
