--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,16 +2,18 @@
 
 S3method(fit,fmls)
 S3method(format,fmls)
-S3method(format,list_of_formulas)
+S3method(format,lst_fmls)
 S3method(format,tm)
+S3method(format,tmls)
 S3method(formula,fmls)
-S3method(formula,list_of_formulas)
+S3method(formula,lst_fmls)
 S3method(formula,tm)
 S3method(glance,model_archetype)
 S3method(lhs,formula)
 S3method(obj_print_data,fmls)
-S3method(obj_print_data,list_of_formulas)
+S3method(obj_print_data,lst_fmls)
 S3method(obj_print_data,tm)
+S3method(obj_print_data,tmls)
 S3method(print,forge)
 S3method(rhs,formula)
 S3method(tidy,model_archetype)
@@ -25,7 +27,7 @@ S3method(vec_cast,fmls.fmls)
 S3method(vec_cast,forge.data.frame)
 S3method(vec_cast,forge.forge)
 S3method(vec_cast,forge.tbl_df)
-S3method(vec_cast,list_of_formulas.list_of_formulas)
+S3method(vec_cast,lst_fmls.lst_fmls)
 S3method(vec_cast,tbl_df.forge)
 S3method(vec_cast,tm.character)
 S3method(vec_cast,tm.fmls)
@@ -39,7 +41,7 @@ S3method(vec_ptype2,fmls.tm)
 S3method(vec_ptype2,forge.data.frame)
 S3method(vec_ptype2,forge.forge)
 S3method(vec_ptype2,forge.tbl_df)
-S3method(vec_ptype2,list_of_formulas.list_of_forulas)
+S3method(vec_ptype2,lst_fmls.list_of_forulas)
 S3method(vec_ptype2,tbl_df.forge)
 S3method(vec_ptype2,tm.character)
 S3method(vec_ptype2,tm.fmls)
@@ -47,19 +49,22 @@ S3method(vec_ptype2,tm.tm)
 S3method(vec_ptype_abbr,data_list)
 S3method(vec_ptype_abbr,fmls)
 S3method(vec_ptype_abbr,forge)
+S3method(vec_ptype_abbr,lst_fmls)
 S3method(vec_ptype_abbr,model_info)
 S3method(vec_ptype_abbr,parameter_estimates)
 S3method(vec_ptype_abbr,tm)
+S3method(vec_ptype_abbr,tmls)
 S3method(vec_ptype_full,data_list)
 S3method(vec_ptype_full,fmls)
 S3method(vec_ptype_full,forge)
-S3method(vec_ptype_full,list_of_formulas)
+S3method(vec_ptype_full,lst_fmls)
 S3method(vec_ptype_full,model_info)
 S3method(vec_ptype_full,parameter_estimates)
 S3method(vec_ptype_full,tm)
-export(cast_fmls)
+S3method(vec_ptype_full,tmls)
 export(data_list)
 export(fit)
+export(fmls)
 export(forge)
 export(forge_cast)
 export(forge_ptype2)
@@ -69,16 +74,16 @@ export(interaction_estimates)
 export(is_dichotomous)
 export(is_tm)
 export(lhs)
-export(list_of_formulas)
+export(lst_fmls)
 export(mdls)
 export(model_info)
 export(number_of_missing)
 export(parameter_estimates)
 export(rhs)
-export(sx)
 export(temper)
 export(tidy)
 export(tm)
+export(tmls)
 import(vctrs)
 importFrom(dplyr,mutate)
 importFrom(generics,fit)
