fix term handling of formulas #6

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,7 +68,7 @@ export(fmls)
 export(forge)
 export(forge_cast)
 export(forge_ptype2)
-export(formula_to_named_list)
+export(formulas_to_named_list)
 export(glance)
 export(interaction_estimates)
 export(is_dichotomous)
