add S4 methods extension

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ S3method(vec_ptype_full,model_info)
 S3method(vec_ptype_full,parameter_estimates)
 S3method(vec_ptype_full,tm)
 S3method(vec_ptype_full,tmls)
+export()
 export(data_list)
 export(fit)
 export(fmls)
