add update function for terms; start managing formula implementation #6 #9 #10

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ S3method(tidy,model_archetype)
 S3method(tm,character)
 S3method(tm,default)
 S3method(tm,formula)
+S3method(update,tm)
 S3method(vec_cast,character.fmls)
 S3method(vec_cast,character.tm)
 S3method(vec_cast,data.frame.forge)
