improve term functions and fix list of formula issue on grouping #16

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,15 +8,15 @@ S3method(format,tmls)
 S3method(formula,fmls)
 S3method(formula,lst_fmls)
 S3method(formula,tm)
-S3method(glance,model_archetype)
+S3method(glance,mdls)
 S3method(lhs,formula)
 S3method(obj_print_data,fmls)
 S3method(obj_print_data,lst_fmls)
 S3method(obj_print_data,tm)
 S3method(obj_print_data,tmls)
-S3method(print,forge)
+S3method(print,md_tbl)
 S3method(rhs,formula)
-S3method(tidy,model_archetype)
+S3method(tidy,mdls)
 S3method(tm,character)
 S3method(tm,default)
 S3method(tm,fmls)
@@ -24,78 +24,81 @@ S3method(tm,formula)
 S3method(update,tm)
 S3method(vec_cast,character.fmls)
 S3method(vec_cast,character.tm)
-S3method(vec_cast,data.frame.forge)
+S3method(vec_cast,data.frame.md_tbl)
 S3method(vec_cast,fmls.fmls)
 S3method(vec_cast,fmls.formula)
 S3method(vec_cast,fmls.tm)
-S3method(vec_cast,forge.data.frame)
-S3method(vec_cast,forge.forge)
-S3method(vec_cast,forge.tbl_df)
 S3method(vec_cast,formula.fmls)
 S3method(vec_cast,formula.lst_fmls)
 S3method(vec_cast,formula.tm)
 S3method(vec_cast,lst_fmls.formula)
 S3method(vec_cast,lst_fmls.lst_fmls)
-S3method(vec_cast,tbl_df.forge)
+S3method(vec_cast,md_tbl.data.frame)
+S3method(vec_cast,md_tbl.md_tbl)
+S3method(vec_cast,md_tbl.tbl_df)
+S3method(vec_cast,tbl_df.md_tbl)
 S3method(vec_cast,tm.character)
 S3method(vec_cast,tm.fmls)
 S3method(vec_cast,tm.formula)
 S3method(vec_cast,tm.tm)
 S3method(vec_ptype2,character.fmls)
 S3method(vec_ptype2,character.tm)
-S3method(vec_ptype2,data.frame.forge)
+S3method(vec_ptype2,data.frame.md_tbl)
 S3method(vec_ptype2,fmls.character)
 S3method(vec_ptype2,fmls.fmls)
 S3method(vec_ptype2,fmls.formula)
 S3method(vec_ptype2,fmls.tm)
-S3method(vec_ptype2,forge.data.frame)
-S3method(vec_ptype2,forge.forge)
-S3method(vec_ptype2,forge.tbl_df)
 S3method(vec_ptype2,formula.fmls)
 S3method(vec_ptype2,formula.lst_fmls)
 S3method(vec_ptype2,formula.tm)
 S3method(vec_ptype2,lst_fmls.formula)
 S3method(vec_ptype2,lst_fmls.list_of_forulas)
-S3method(vec_ptype2,tbl_df.forge)
+S3method(vec_ptype2,md_tbl.data.frame)
+S3method(vec_ptype2,md_tbl.md_tbl)
+S3method(vec_ptype2,md_tbl.tbl_df)
+S3method(vec_ptype2,tbl_df.md_tbl)
 S3method(vec_ptype2,tm.character)
 S3method(vec_ptype2,tm.fmls)
 S3method(vec_ptype2,tm.formula)
 S3method(vec_ptype2,tm.tm)
 S3method(vec_ptype_abbr,data_list)
 S3method(vec_ptype_abbr,fmls)
-S3method(vec_ptype_abbr,forge)
 S3method(vec_ptype_abbr,lst_fmls)
+S3method(vec_ptype_abbr,md_tbl)
 S3method(vec_ptype_abbr,model_info)
 S3method(vec_ptype_abbr,parameter_estimates)
 S3method(vec_ptype_abbr,tm)
 S3method(vec_ptype_abbr,tmls)
 S3method(vec_ptype_full,data_list)
 S3method(vec_ptype_full,fmls)
-S3method(vec_ptype_full,forge)
 S3method(vec_ptype_full,lst_fmls)
+S3method(vec_ptype_full,md_tbl)
 S3method(vec_ptype_full,model_info)
 S3method(vec_ptype_full,parameter_estimates)
 S3method(vec_ptype_full,tm)
 S3method(vec_ptype_full,tmls)
 export()
 export(data_list)
+export(find_terms)
 export(fit)
 export(fmls)
-export(forge)
-export(forge_cast)
-export(forge_ptype2)
 export(formulas_to_named_list)
 export(glance)
 export(interaction_estimates)
 export(is_dichotomous)
+export(is_fmls)
 export(is_tm)
 export(lhs)
 export(lst_fmls)
-export(mdls)
+export(md_tbl)
+export(md_tbl_cast)
+export(md_tbl_ptype2)
 export(model_info)
+export(model_table)
 export(number_of_missing)
 export(parameter_estimates)
 export(rhs)
+export(roles)
 export(temper)
 export(tidy)
 export(tm)
