assess complexity of terms or term lists closes #20

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,7 @@ S3method(vec_ptype_full,parameter_estimates)
 S3method(vec_ptype_full,tm)
 S3method(vec_ptype_full,tmls)
 export()
+export(complexity)
 export(data_list)
 export(find_terms)
 export(fit)
