--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ S3method(tm,character)
 S3method(tm,default)
 S3method(tm,fmls)
 S3method(tm,formula)
+S3method(tm,tm)
 S3method(update,tm)
 S3method(vec_cast,character.fmls)
 S3method(vec_cast,character.tm)
@@ -84,7 +85,6 @@ export(augment)
 export(complexity)
 export(components)
 export(data_list)
-export(expand_by_complexity)
 export(fit)
 export(fmls)
 export(formulas_to_named_list)
@@ -106,6 +106,10 @@ export(parameter_estimates)
 export(rhs)
 export(roles)
 export(setdiff)
+export(simplify)
+export(simplify_exposures)
+export(simplify_mediation)
+export(simplify_outcomes)
 export(temper)
 export(tidy)
 export(tm)
