added interaction terms #11

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ S3method(update,tm)
 S3method(vec_cast,character.fmls)
 S3method(vec_cast,character.tm)
 S3method(vec_cast,data.frame.md_tbl)
+S3method(vec_cast,fmls.character)
 S3method(vec_cast,fmls.fmls)
 S3method(vec_cast,fmls.formula)
 S3method(vec_cast,fmls.tm)
@@ -108,6 +109,7 @@ export(roles)
 export(setdiff)
 export(simplify)
 export(simplify_exposures)
+export(simplify_interaction)
 export(simplify_mediation)
 export(simplify_outcomes)
 export(temper)
