handle simple sequential expansion

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -104,6 +104,8 @@ export(model_info)
 export(model_table)
 export(number_of_missing)
 export(parameter_estimates)
+export(pattern)
+export(pattern_sequentially)
 export(rhs)
 export(roles)
 export(setdiff)
