update group argument in terms; ensure works for formulas #22

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(formula,fmls)
 S3method(formula,lst_fmls)
 S3method(formula,tm)
 S3method(glance,mdls)
+S3method(intersect,tm)
 S3method(lhs,formula)
 S3method(obj_print_data,fmls)
 S3method(obj_print_data,lst_fmls)
@@ -86,6 +87,7 @@ export(augment)
 export(complexity)
 export(components)
 export(data_list)
+export(describe)
 export(fit)
 export(fmls)
 export(formulas_to_named_list)
@@ -107,7 +109,6 @@ export(parameter_estimates)
 export(pattern)
 export(pattern_sequentially)
 export(rhs)
-export(roles)
 export(setdiff)
 export(simplify)
 export(simplify_exposures)
