add inital model fits closes #11 #17 #9 #3

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(filter,tm)
 S3method(fit,fmls)
 S3method(format,fmls)
 S3method(format,lst_fmls)
+S3method(format,mdl)
 S3method(format,tm)
 S3method(format,tmls)
 S3method(formula,fmls)
@@ -15,8 +16,10 @@ S3method(intersect,tm)
 S3method(lhs,formula)
 S3method(obj_print_data,fmls)
 S3method(obj_print_data,lst_fmls)
+S3method(obj_print_data,mdl)
 S3method(obj_print_data,tm)
 S3method(obj_print_data,tmls)
+S3method(pillar_shaft,mdl)
 S3method(print,md_tbl)
 S3method(rhs,formula)
 S3method(tidy,mdls)
@@ -41,6 +44,7 @@ S3method(vec_cast,lst_fmls.lst_fmls)
 S3method(vec_cast,md_tbl.data.frame)
 S3method(vec_cast,md_tbl.md_tbl)
 S3method(vec_cast,md_tbl.tbl_df)
+S3method(vec_cast,mdl.mdl)
 S3method(vec_cast,tbl_df.md_tbl)
 S3method(vec_cast,tm.character)
 S3method(vec_cast,tm.fmls)
@@ -61,6 +65,7 @@ S3method(vec_ptype2,lst_fmls.lst_fmls)
 S3method(vec_ptype2,md_tbl.data.frame)
 S3method(vec_ptype2,md_tbl.md_tbl)
 S3method(vec_ptype2,md_tbl.tbl_df)
+S3method(vec_ptype2,mdl.mdl)
 S3method(vec_ptype2,tbl_df.md_tbl)
 S3method(vec_ptype2,tm.character)
 S3method(vec_ptype2,tm.fmls)
@@ -70,6 +75,7 @@ S3method(vec_ptype_abbr,data_list)
 S3method(vec_ptype_abbr,fmls)
 S3method(vec_ptype_abbr,lst_fmls)
 S3method(vec_ptype_abbr,md_tbl)
+S3method(vec_ptype_abbr,mdl)
 S3method(vec_ptype_abbr,model_info)
 S3method(vec_ptype_abbr,parameter_estimates)
 S3method(vec_ptype_abbr,tm)
@@ -78,6 +84,7 @@ S3method(vec_ptype_full,data_list)
 S3method(vec_ptype_full,fmls)
 S3method(vec_ptype_full,lst_fmls)
 S3method(vec_ptype_full,md_tbl)
+S3method(vec_ptype_full,mdl)
 S3method(vec_ptype_full,model_info)
 S3method(vec_ptype_full,parameter_estimates)
 S3method(vec_ptype_full,tm)
@@ -101,6 +108,8 @@ export(lst_fmls)
 export(md_tbl)
 export(md_tbl_cast)
 export(md_tbl_ptype2)
+export(mdl)
+export(model)
 export(model_info)
 export(model_table)
 export(number_of_missing)
@@ -131,3 +140,4 @@ importFrom(generics,intersect)
 importFrom(generics,setdiff)
 importFrom(generics,tidy)
 importFrom(generics,union)
+importFrom(pillar,pillar_shaft)
