remove lst_fmls() for now; init model tables #18 closes #14 closes #21 #17

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,25 +4,22 @@ S3method(augment,fmls)
 S3method(filter,tm)
 S3method(fit,fmls)
 S3method(format,fmls)
-S3method(format,lst_fmls)
 S3method(format,mdl)
 S3method(format,tm)
 S3method(format,tmls)
 S3method(formula,fmls)
-S3method(formula,lst_fmls)
 S3method(formula,tm)
 S3method(glance,mdls)
 S3method(intersect,tm)
 S3method(lhs,formula)
 S3method(obj_print_data,fmls)
-S3method(obj_print_data,lst_fmls)
 S3method(obj_print_data,mdl)
 S3method(obj_print_data,tm)
 S3method(obj_print_data,tmls)
 S3method(pillar_shaft,mdl)
 S3method(print,md_tbl)
 S3method(rhs,formula)
-S3method(tidy,mdls)
+S3method(tidy,mdl)
 S3method(tm,character)
 S3method(tm,default)
 S3method(tm,fmls)
@@ -37,10 +34,7 @@ S3method(vec_cast,fmls.fmls)
 S3method(vec_cast,fmls.formula)
 S3method(vec_cast,fmls.tm)
 S3method(vec_cast,formula.fmls)
-S3method(vec_cast,formula.lst_fmls)
 S3method(vec_cast,formula.tm)
-S3method(vec_cast,lst_fmls.formula)
-S3method(vec_cast,lst_fmls.lst_fmls)
 S3method(vec_cast,md_tbl.data.frame)
 S3method(vec_cast,md_tbl.md_tbl)
 S3method(vec_cast,md_tbl.tbl_df)
@@ -58,10 +52,7 @@ S3method(vec_ptype2,fmls.fmls)
 S3method(vec_ptype2,fmls.formula)
 S3method(vec_ptype2,fmls.tm)
 S3method(vec_ptype2,formula.fmls)
-S3method(vec_ptype2,formula.lst_fmls)
 S3method(vec_ptype2,formula.tm)
-S3method(vec_ptype2,lst_fmls.formula)
-S3method(vec_ptype2,lst_fmls.lst_fmls)
 S3method(vec_ptype2,md_tbl.data.frame)
 S3method(vec_ptype2,md_tbl.md_tbl)
 S3method(vec_ptype2,md_tbl.tbl_df)
@@ -73,7 +64,6 @@ S3method(vec_ptype2,tm.formula)
 S3method(vec_ptype2,tm.tm)
 S3method(vec_ptype_abbr,data_list)
 S3method(vec_ptype_abbr,fmls)
-S3method(vec_ptype_abbr,lst_fmls)
 S3method(vec_ptype_abbr,md_tbl)
 S3method(vec_ptype_abbr,mdl)
 S3method(vec_ptype_abbr,model_info)
@@ -82,7 +72,6 @@ S3method(vec_ptype_abbr,tm)
 S3method(vec_ptype_abbr,tmls)
 S3method(vec_ptype_full,data_list)
 S3method(vec_ptype_full,fmls)
-S3method(vec_ptype_full,lst_fmls)
 S3method(vec_ptype_full,md_tbl)
 S3method(vec_ptype_full,mdl)
 S3method(vec_ptype_full,model_info)
@@ -102,9 +91,9 @@ export(interaction_estimates)
 export(intersect)
 export(is_dichotomous)
 export(is_fmls)
+export(is_model_table)
 export(is_tm)
 export(lhs)
-export(lst_fmls)
 export(md_tbl)
 export(md_tbl_cast)
 export(md_tbl_ptype2)
@@ -126,6 +115,7 @@ export(simplify_exposures)
 export(simplify_mediation)
 export(simplify_outcomes)
 export(temper)
+export(temporary)
 export(tidy)
 export(tm)
 export(tmls)
