switch fmls to be a data frame base class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,11 +11,11 @@ S3method(formula,tm)
 S3method(glance,mdls)
 S3method(intersect,tm)
 S3method(lhs,formula)
-S3method(obj_print_data,fmls)
 S3method(obj_print_data,mdl)
 S3method(obj_print_data,tm)
 S3method(obj_print_data,tmls)
 S3method(pillar_shaft,mdl)
+S3method(print,fmls)
 S3method(print,md_tbl)
 S3method(rhs,formula)
 S3method(tidy,mdl)
@@ -83,6 +83,8 @@ export(data_list)
 export(describe)
 export(fit)
 export(fmls)
+export(fmls_cast)
+export(fmls_ptype2)
 export(formulas_to_named_list)
 export(glance)
 export(interaction_estimates)
