--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,16 +8,19 @@ S3method(format,mdl)
 S3method(format,tm)
 S3method(formula,fmls)
 S3method(formula,tm)
-S3method(glance,mdls)
 S3method(intersect,tm)
 S3method(lhs,formula)
+S3method(mdl,character)
+S3method(mdl,coxph)
+S3method(mdl,default)
+S3method(mdl,glm)
+S3method(mdl,lm)
 S3method(obj_print_data,mdl)
 S3method(obj_print_data,tm)
 S3method(pillar_shaft,mdl)
 S3method(print,fmls)
 S3method(print,md_tbl)
 S3method(rhs,formula)
-S3method(tidy,mdl)
 S3method(tm,character)
 S3method(tm,default)
 S3method(tm,fmls)
@@ -50,23 +53,18 @@ S3method(vec_ptype2,tm.character)
 S3method(vec_ptype2,tm.fmls)
 S3method(vec_ptype2,tm.formula)
 S3method(vec_ptype2,tm.tm)
-S3method(vec_ptype_abbr,data_list)
 S3method(vec_ptype_abbr,fmls)
 S3method(vec_ptype_abbr,md_tbl)
 S3method(vec_ptype_abbr,mdl)
-S3method(vec_ptype_abbr,model_info)
-S3method(vec_ptype_abbr,parameter_estimates)
 S3method(vec_ptype_abbr,tm)
-S3method(vec_ptype_full,data_list)
 S3method(vec_ptype_full,fmls)
 S3method(vec_ptype_full,md_tbl)
 S3method(vec_ptype_full,mdl)
-S3method(vec_ptype_full,model_info)
-S3method(vec_ptype_full,parameter_estimates)
 S3method(vec_ptype_full,tm)
 export()
 export(complexity)
-export(data_list)
+export(construct_formula_table)
+export(construct_model_table)
 export(describe)
 export(fit)
 export(fmls)
@@ -85,21 +83,11 @@ export(lhs)
 export(md_tbl)
 export(mdl)
 export(model)
-export(model_info)
 export(model_table)
+export(new_model_table)
 export(number_of_missing)
-export(parameter_estimates)
-export(pattern)
-export(pattern_direct)
-export(pattern_fundamental)
-export(pattern_parallel)
-export(pattern_sequential)
 export(rhs)
 export(setdiff)
-export(simplify)
-export(simplify_exposures)
-export(simplify_mediation)
-export(simplify_outcomes)
 export(temper)
 export(tidy)
 export(tm)
