update dplyr dependencies

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ S3method(vec_cast,fmls.formula)
 S3method(vec_cast,fmls.tm)
 S3method(vec_cast,formula.fmls)
 S3method(vec_cast,formula.tm)
+S3method(vec_cast,md_tbl.md_tbl)
 S3method(vec_cast,mdl.mdl)
 S3method(vec_cast,tm.character)
 S3method(vec_cast,tm.fmls)
@@ -48,6 +49,7 @@ S3method(vec_ptype2,fmls.formula)
 S3method(vec_ptype2,fmls.tm)
 S3method(vec_ptype2,formula.fmls)
 S3method(vec_ptype2,formula.tm)
+S3method(vec_ptype2,md_tbl.md_tbl)
 S3method(vec_ptype2,mdl.mdl)
 S3method(vec_ptype2,tm.character)
 S3method(vec_ptype2,tm.fmls)
@@ -81,6 +83,8 @@ export(is_tm)
 export(key_terms)
 export(lhs)
 export(md_tbl)
+export(md_tbl_cast)
+export(md_tbl_ptype2)
 export(mdl)
 export(model)
 export(model_table)
@@ -94,7 +98,6 @@ export(tm)
 export(union)
 import(vctrs)
 importFrom(dplyr,filter)
-importFrom(dplyr,mutate)
 importFrom(generics,fit)
 importFrom(generics,glance)
 importFrom(generics,intersect)
