handle the flattening of tables

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ export(construct_table_from_formulas)
 export(construct_table_from_models)
 export(describe)
 export(fit)
+export(flatten_table)
 export(fmls)
 export(fmls_cast)
 export(fmls_ptype2)
