decided to move functionality from <durandal> to here to simplify things

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,9 @@ Imports:
     broom,
     tidyr,
     rlang,
-    pillar
+    pillar,
+    gt,
+    survival,
 Suggests: 
     testthat (>= 3.0.0),
     covr,
