--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,9 +93,14 @@ export(model_table_reconstructable)
 export(new_model_table)
 export(number_of_missing)
 export(rhs)
+export(tbl_categorical_hazard)
+export(tbl_group_forests)
+export(theme_gt_compact)
 export(tidy)
 export(tm)
 export(validate_model_table)
+import(ggplot2)
+import(gt)
 import(vctrs)
 importFrom(dplyr,dplyr_reconstruct)
 importFrom(dplyr,dplyr_row_slice)
@@ -103,4 +108,7 @@ importFrom(dplyr,filter)
 importFrom(generics,fit)
 importFrom(generics,glance)
 importFrom(generics,tidy)
+importFrom(gt,pct)
+importFrom(gt,px)
+importFrom(gt,tab_options)
 importFrom(pillar,pillar_shaft)
