split table function based on categorical versus dichotomous variables #28

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,6 +94,7 @@ export(new_model_table)
 export(number_of_missing)
 export(rhs)
 export(tbl_categorical_hazard)
+export(tbl_dichotomous_hazard)
 export(tbl_group_forests)
 export(theme_gt_compact)
 export(tidy)
