start on forest plots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,10 +92,11 @@ export(model_table_reconstruct)
 export(model_table_reconstructable)
 export(new_model_table)
 export(number_of_missing)
+export(old_tbl_group_forests)
 export(rhs)
 export(tbl_categorical_hazard)
 export(tbl_dichotomous_hazard)
-export(tbl_group_forests)
+export(tbl_stratified_forest)
 export(theme_gt_compact)
 export(tidy)
 export(tm)
