start looking at interaction #29

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,10 +95,12 @@ export(number_of_missing)
 export(rhs)
 export(tbl_categorical_hazard)
 export(tbl_dichotomous_hazard)
+export(tbl_stratified_forest)
 export(theme_gt_compact)
 export(tidy)
 export(tm)
 export(validate_model_table)
+import(ggplot2)
 import(gt)
 import(vctrs)
 importFrom(dplyr,dplyr_reconstruct)
