--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,7 +69,6 @@ export(construct_table_from_formulas)
 export(construct_table_from_models)
 export(describe)
 export(fit)
-export(flatten_table)
 export(fmls)
 export(fmls_cast)
 export(fmls_ptype2)
@@ -91,6 +90,7 @@ export(model_table_reconstruct)
 export(model_table_reconstructable)
 export(new_model_table)
 export(number_of_missing)
+export(reduce_models)
 export(rhs)
 export(tbl_categorical_hazard)
 export(tbl_dichotomous_hazard)
