build interaction estimates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ export(complexity)
 export(construct_table_from_formulas)
 export(construct_table_from_models)
 export(describe)
+export(estimate_interaction)
 export(fit)
 export(fmls)
 export(fmls_cast)
