--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ S3method(vec_ptype_full,fmls)
 S3method(vec_ptype_full,mdl)
 S3method(vec_ptype_full,mdl_tbl)
 S3method(vec_ptype_full,tm)
+export(attach_data)
 export(complexity)
 export(construct_table_from_formulas)
 export(construct_table_from_models)
