start evaluating reasons for parallel formula expansion failing with interaction terms #35

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -96,6 +96,7 @@ export(reduce_models)
 export(rhs)
 export(tbl_categorical_hazard)
 export(tbl_dichotomous_hazard)
+export(tbl_interaction_forest)
 export(tbl_stratified_forest)
 export(theme_gt_compact)
 export(tidy)
