update model table; init issue with parallel formula expansion #35

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ export(construct_table_from_models)
 export(describe)
 export(estimate_interaction)
 export(fit)
+export(flatten_models)
 export(fmls)
 export(fmls_cast)
 export(fmls_ptype2)
@@ -92,7 +93,6 @@ export(model_table_reconstruct)
 export(model_table_reconstructable)
 export(new_model_table)
 export(number_of_missing)
-export(reduce_models)
 export(rhs)
 export(tbl_categorical_hazard)
 export(tbl_dichotomous_hazard)
