--- a/NAMESPACE
+++ b/NAMESPACE
@@ -115,3 +115,5 @@ importFrom(gt,pct)
 importFrom(gt,px)
 importFrom(gt,tab_options)
 importFrom(pillar,pillar_shaft)
+importFrom(rlang,"!!!")
+importFrom(rlang,":=")
