revise how structure of formulas are expanded

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,12 @@ S3method(vec_ptype_full,fmls)
 S3method(vec_ptype_full,mdl)
 S3method(vec_ptype_full,mdl_tbl)
 S3method(vec_ptype_full,tm)
+export(apply_direct_pattern)
+export(apply_fundamental_pattern)
+export(apply_parallel_pattern)
+export(apply_pattern)
+export(apply_rolling_interaction_pattern)
+export(apply_sequential_pattern)
 export(attach_data)
 export(complexity)
 export(construct_table_from_formulas)
