introduce new estimate table function #47

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,8 +72,6 @@ export(apply_rolling_interaction_pattern)
 export(apply_sequential_pattern)
 export(attach_data)
 export(complexity)
-export(construct_table_from_formulas)
-export(construct_table_from_models)
 export(describe)
 export(estimate_interaction)
 export(fit)
@@ -81,32 +79,27 @@ export(flatten_models)
 export(fmls)
 export(fmls_cast)
 export(fmls_ptype2)
-export(formulas_to_named_list)
 export(glance)
 export(is_dichotomous)
 export(is_fmls)
 export(is_model_table)
 export(is_tm)
 export(key_terms)
+export(labeled_formulas_to_named_list)
 export(lhs)
 export(mdl)
 export(mdl_tbl)
-export(mdl_tbl_cast)
-export(mdl_tbl_ptype2)
 export(model)
 export(model_table)
-export(model_table_reconstruct)
-export(model_table_reconstructable)
-export(new_model_table)
 export(number_of_missing)
 export(rhs)
 export(tbl_categorical_hazard)
 export(tbl_dichotomous_hazard)
 export(tbl_interaction_forest)
+export(tbl_linear)
 export(theme_gt_compact)
 export(tidy)
 export(tm)
-export(validate_model_table)
 import(ggplot2)
 import(gt)
 import(vctrs)
