add injection support to linear tables #48

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,10 +93,10 @@ export(model)
 export(model_table)
 export(number_of_missing)
 export(rhs)
+export(tbl_beta)
 export(tbl_categorical_hazard)
 export(tbl_dichotomous_hazard)
 export(tbl_interaction_forest)
-export(tbl_linear)
 export(theme_gt_compact)
 export(tidy)
 export(tm)
