--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,14 +71,11 @@ export(apply_pattern)
 export(apply_rolling_interaction_pattern)
 export(apply_sequential_pattern)
 export(attach_data)
-export(complexity)
 export(describe)
 export(estimate_interaction)
 export(fit)
 export(flatten_models)
 export(fmls)
-export(fmls_cast)
-export(fmls_ptype2)
 export(glance)
 export(is_dichotomous)
 export(is_fmls)
@@ -93,15 +90,8 @@ export(model)
 export(model_table)
 export(number_of_missing)
 export(rhs)
-export(tbl_beta)
-export(tbl_categorical_hazard)
-export(tbl_dichotomous_hazard)
-export(tbl_interaction_forest)
-export(theme_gt_compact)
 export(tidy)
 export(tm)
-import(ggplot2)
-import(gt)
 import(vctrs)
 importFrom(dplyr,dplyr_reconstruct)
 importFrom(dplyr,dplyr_row_slice)
@@ -109,9 +99,9 @@ importFrom(dplyr,filter)
 importFrom(generics,fit)
 importFrom(generics,glance)
 importFrom(generics,tidy)
-importFrom(gt,pct)
-importFrom(gt,px)
-importFrom(gt,tab_options)
 importFrom(pillar,pillar_shaft)
 importFrom(rlang,"!!!")
 importFrom(rlang,":=")
+importFrom(stats,formula)
+importFrom(tibble,new_tibble)
+importFrom(tibble,tibble)
