more specific error message for parsing levels in tabels

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,8 +90,15 @@ export(model)
 export(model_table)
 export(number_of_missing)
 export(rhs)
+export(tbl_beta)
+export(tbl_categorical_hazard)
+export(tbl_dichotomous_hazard)
+export(tbl_interaction_forest)
+export(theme_gt_compact)
 export(tidy)
 export(tm)
+import(ggplot2)
+import(gt)
 import(vctrs)
 importFrom(dplyr,dplyr_reconstruct)
 importFrom(dplyr,dplyr_row_slice)
@@ -99,6 +106,9 @@ importFrom(dplyr,filter)
 importFrom(generics,fit)
 importFrom(generics,glance)
 importFrom(generics,tidy)
+importFrom(gt,pct)
+importFrom(gt,px)
+importFrom(gt,tab_options)
 importFrom(pillar,pillar_shaft)
 importFrom(rlang,"!!!")
 importFrom(rlang,":=")
