--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -5,11 +5,11 @@ template:
 
 destination: docs
 
-url: https://asshah4.github.io/volundr/
+url: https://asshah4.github.io/rmdl/
 
 home:
-  title: Forging many models together
-  description: A way to handle many models
+  title: Language to Manage Many Models
+  description: Remodeling formulas and models in R
   sidebar:
     structure: [links, license, community, citation, authors, dev]
 
@@ -26,4 +26,4 @@ navbar:
       href: reference/index.html
     github:
       icon: fab fa-github fa-lg
-      href: https://github.com/asshah4/volundr/
+      href: https://github.com/asshah4/rmdl/
