--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -15,7 +15,7 @@ template:
 
 destination: docs
 
-url: https://asshah4.github.io/rmdl/
+url: https://shah-in-boots.github.io/rmdl/
 
 home:
   title: Language to Manage Many Models
@@ -30,10 +30,10 @@ navbar:
   components:
     home:
       icon: fas fa-home fa-lg
-      href: https://asshah4.github.io/
+      href: https://shah-in-boots.github.io/
     reference:
       text: Reference
       href: reference/index.html
     github:
       icon: fab fa-github fa-lg
-      href: https://github.com/asshah4/rmdl/
+      href: https://github.com/shah-in-boots/rmdl/
