--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: rmdl
 Title: Language to Manage Many Models
 Version: 0.1.0
 Authors@R: 
-    person(given = "Anish",
+    person(given = "Anish S.",
            family = "Shah",
            role = c("aut", "cre", "cph"),
            email = "ashah282@uic.edu",
