--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -56,3 +56,10 @@ navbar:
     github:
       icon: fab fa-github fa-lg
       href: https://github.com/shah-in-boots/rmdl/
+
+footer:
+  structure:
+    left: developed_by
+    right: [built_with, theme]
+  components:
+    theme: Colorspace from the **mako** palette
