--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,17 +9,17 @@ Authors@R:
            comment = c(ORCID = "0000-0002-9729-1558"))
 Description: A system for describing and manipulating the many models that are
     generated in causal inference and data analysis projects, as based on the
-		causal theory and criteria of Austin Bradford Hill (1965) 
-		<doi:10.1177/003591576505800503>. This system includes the addition of 
-		formal attributes that modify base `R` objects, including terms and 
-		formulas, with a focus on variable roles in the "do-calculus" of modeling,
-		as described in Pearl (2010) <doi:10.2202/1557-4679.1203>. For example, the 
-		definition of exposure, outcome, and interaction are  implicit in the roles 
-		variables take in a formula. These premises allow for a more fluent modeling
-		approach focusing on variable relationships, and assessing effect 
-		modification, as described by VanderWeele and Robins (2007) 
-		<doi:10.1097/EDE.0b013e318127181b>. The essential goal is to help 
-		contextualize formulas and models in causality-oriented workflows.
+	  causal theory and criteria of Austin Bradford Hill (1965) 
+	  <doi:10.1177/003591576505800503>. This system includes the addition of 
+	  formal attributes that modify base `R` objects, including terms and 
+	  formulas, with a focus on variable roles in the "do-calculus" of modeling,
+	  as described in Pearl (2010) <doi:10.2202/1557-4679.1203>. For example, the 
+	  definition of exposure, outcome, and interaction are  implicit in the roles 
+	  variables take in a formula. These premises allow for a more fluent modeling
+	  approach focusing on variable relationships, and assessing effect 
+	  modification, as described by VanderWeele and Robins (2007) 
+	  <doi:10.1097/EDE.0b013e318127181b>. The essential goal is to help 
+	  contextualize formulas and models in causality-oriented workflows.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -39,19 +39,17 @@ Imports:
     tidyr,
     rlang,
     pillar,
-    purrr,
-    janitor
+    purrr
 Suggests: 
     testthat (>= 3.0.0),
+    knitr,
     covr,
     cli,
-    rmarkdown,
-    knitr,
     ggplot2,
     gt,
     survival,
     cmprsk,
-    tidycmprsk
+    tidycmprsk,
 VignetteBuilder: knitr
 URL: https://github.com/shah-in-boots/rmdl
 BugReports: https://github.com/shah-in-boots/rmdl/issues
